# Notes

./: .gitignore  8_re.py  Fluid.md  PSO  README.md  Tasklist.md
ARS/: Day1.md  Day3.md  Day4.md  Day4_Afternoon.md  Day5.md
ARS/Kalman/: BaysianFilter.ipynb  Ch04.ipynb  Ch11.ipynb  EKF.ipynb  Filter.md  GH.ipynb  KalmanFilter.ipynb  UKF.ipynb
ARS/PathPlanning/: RTT.ipynb  RTT_Star.ipynb  temp.py
ARS/Practice1/: Code.ipynb
ARS/Practice2/: Untitled.ipynb
Book/CookBook/: Ch04.md
Book/D2L/: lstm.ipynb
Book/Hulu/: Ch01.md
Book/SLAM_14/: BasicMath.md  Ch03.md  Ch06.md  Ch07.md  RigidBodyMotion.md  day01.md
Book/Temp/: example1.py  (+4 more)
CS224W/: Lab0.md  Lecture1.md  Lecture2.md  Lecture3.md  Lecture4.md  Lecture5.md  Lecture6.md  Node2Vec.md
GP/: record1.md
GP/SLAM14/: CMakeLists.txt  main.cpp  uselib.cpp  uselib.h
Game/: SS.csv  temp.md
HRI/: Assignment.md  Day1.md  Day2.md  Day3.md  groupAssignmen.md
IRP/: A.md  Datasets.md  Literature Review.md  PaperReading.md  Problem.md  RanaPaper.md  Structure.md  application.md  command.md  paperlist.md  temp.md
Icl/: Paper.md  icl1.md  paperreading.md
Insight/: 1.md  Loss.md
KB 5005/: Moody.m
KB 5008/: Report.m  pen.m  pen.py  pen_yx.py  pen_zxj.py
Kaggle/: Inference.ipynb  temp1.ipynb  try1.ipynb
Leetcode/: LC1.md  LC2.md
MVR/: Day1.md  Day2.md  Day3.md  Day4.md  Day5.md
PES/: Day3.md  Group3 NAO.docx  Qualitative.md
Paper/: Readme.md  colab.csv
Report/: 9_Re.py  CFD.xlsx  Clean Data.py  Fluid.md  PSO_fun.m  Parse Data.py  clearn_data.m  new.py  pen.m  pen.py  running.m
rust/: today
(+261 files in other folders)
